# eventstudies

./: .coverage  .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs-src/source/: conf.py  get_started.md  index.md  latex_intro.md
docs-src/source/api/: eventstudy.Multiple.md  index.md  util.md
eventstudies/: README.md  pyproject.toml
eventstudies/docs-src/source/api/: eventstudy.Single.md  eventstudy.excelExporter.md  util.create_returns_parquet.rst
eventstudies/example/: 10K.csv
eventstudies/example/outputs/: .gitignore
eventstudies/src/eventstudies/: exception.py  outliers.py  single_event.py  util.py
eventstudies/tests/: test_eventstudies.py
example/: README.md
example/notebooks/: example_notebook.ipynb
scripts/: version.py
src/eventstudies/: __init__.py  excel_exporter.py  exception.py  models.py  multiple_events.py  outliers.py  single_event.py  tiingo.py  util.py
tests/: test_excel_exporter.py  test_tiingo.py
