[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2",
    "setuptools_scm_git_archive>=1.0"
]

[project]
name = "eventstudies"
description = "A Python package for event studies"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "numpy>=1.26.0,<2.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.3",
    "statsmodels>=0.14.0",
    "scipy>=1.12.0",
    "pandas_datareader>=0.10.0",
    "pyarrow>=14.0.1",
    "s3fs>=0.4.2",
    "seaborn>=0.13.0",
    "pyod>=2.0.5",
]

[[project.authors]]
name = "Rick Albright"
email = "ralbright@verityplatform.com"

[project.urls]
repository = "https://github.com/insiderscore/python-src/tree/master/eventstudies"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["eventstudies*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=eventstudies"

[tool.black]
line-length = 88
include = "\\.pyi?$"
target-version = [
    "py310",
    "py311",
    "py312"
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to = "src/eventstudies/_version.py"
search_parent_directories = true
git_describe_command = "git describe --tags --match 'v*' --abbrev=0"
tag_regex = "v(\\d+\\.\\d+\\.\\d+)"
root = "."

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = []
